# perseus-client

./: .gitignore  README.md  pyproject.toml
examples/advanced/finance-compliance/: README.md
examples/advanced/graph-rag-reporting/: README.md  index.py  requirements.txt  utils.py
examples/advanced/graph-rag-reporting/output/: graph.cql
examples/simple/build_graph/: build_graph.py
examples/simple/delete_operations/: delete_example.py
examples/simple/file_operations/: file_example.py
examples/simple/ontology_operations/: ontology_example.py
perseus_client/: client.py  config.py
perseus_client/services/: base_service.py  falkordb_service.py  file_service.py  job_service.py  neo4j_service.py  ontology_service.py
